réajout des fonctionnalités