@@ -33,6 +33,11 @@
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
+        <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
@@ -69,10 +74,16 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.mongraphe.graphui.MainApp</mainClass>
+                    <mainClass>com.mongraphe.graphui.app.MainApp</mainClass>
                     <options>
                         <!-- JNI -->
                         <option>-Djava.library.path=${project.basedir}/../graph-native/out</option>
+                        <option>-Dmongraphe.native.path=${project.basedir}/../graph-native/out/libnative.so</option>
+
+                        
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                        <option>--enable-native-access=javafx.graphics</option>
+                        <option>--enable-native-access=javafx.swing</option>
 
                         <!-- Debug rendu -->
                         <option>-Dprism.verbose=true</option>
